--- a/kkapturedll/kkapturedll.vcproj
+++ b/kkapturedll/kkapturedll.vcproj
@@ -43,7 +43,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="..\dshow_base"
+				AdditionalIncludeDirectories="..\dshow_base;..\deps"
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_USRDLL;KKAPTUREDLL_EXPORTS;_CRT_SECURE_NO_DEPRECATE"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -67,6 +67,7 @@
 				AdditionalDependencies="detours.lib gdi32.lib"
 				OutputFile="$(OutDir)/kkapturedll.dll"
 				LinkIncremental="1"
+				AdditionalLibraryDirectories="..\deps"
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile="$(OutDir)/kkapturedll.pdb"
 				SubSystem="2"
@@ -127,7 +128,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="2"
-				AdditionalIncludeDirectories="..\dshow_base"
+				AdditionalIncludeDirectories="..\dshow_base;..\deps"
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL;KKAPTUREDLL_EXPORTS;_CRT_SECURE_NO_DEPRECATE"
 				RuntimeLibrary="0"
 				UsePrecompiledHeader="2"
@@ -149,6 +150,7 @@
 				AdditionalDependencies="detours.lib"
 				OutputFile="$(OutDir)/kkapturedll.dll"
 				LinkIncremental="1"
+				AdditionalLibraryDirectories="..\deps"
 				GenerateDebugInformation="true"
 				SubSystem="2"
 				OptimizeReferences="2"
