--- a/kkapture/kkapture.rc
+++ b/kkapture/kkapture.rc
@@ -1,5 +1,5 @@
 /* kkapture: intrusive demo video capturing.
- * Copyright (c) 2005-2006 Fabian "ryg/farbrausch" Giesen.
+ * Copyright (c) 2005-2009 Fabian "ryg/farbrausch" Giesen.
  *
  * This program is free software; you can redistribute and/or modify it under
  * the terms of the Artistic License, Version 2.0beta5, or (at your opinion)
@@ -91,7 +91,7 @@ LANGUAGE LANG_NEUTRAL, SUBLANG_SYS_DEFAULT
 IDD_MAINWIN DIALOGEX 0, 0, 258, 251
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | 
     WS_SYSMENU
-CAPTION ".kkapture 0.08 beta"
+CAPTION ".kkapture 0.08"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     DEFPUSHBUTTON   "kkapture!",IDOK,149,230,50,14
