Switched from Detours 1.5 to Mhook 2.2; modified internal hooking API to be partially typesafe; updated CONTRIBUTORS.txt to include Mhook credits as per MIT license

--- a/kkapturedll/kkapturedll.vcproj
+++ b/kkapturedll/kkapturedll.vcproj
@@ -64,7 +64,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="detours.lib gdi32.lib"
+				AdditionalDependencies="gdi32.lib"
 				OutputFile="$(OutDir)/kkapturedll.dll"
 				LinkIncremental="1"
 				AdditionalLibraryDirectories="..\deps"
@@ -147,7 +147,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="detours.lib"
+				AdditionalDependencies="gdi32.lib"
 				OutputFile="$(OutDir)/kkapturedll.dll"
 				LinkIncremental="1"
 				AdditionalLibraryDirectories="..\deps"
@@ -353,6 +353,138 @@
 			Filter="rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx"
 			UniqueIdentifier="{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}"
 			>
+		</Filter>
+		<Filter
+			Name="mhook"
+			>
+			<File
+				RelativePath=".\mhook-lib\mhook.cpp"
+				>
+				<FileConfiguration
+					Name="Debug|Win32"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+						UsePrecompiledHeader="0"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Release|Win32"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+						UsePrecompiledHeader="0"
+					/>
+				</FileConfiguration>
+			</File>
+			<File
+				RelativePath=".\mhook-lib\mhook.h"
+				>
+			</File>
+		</Filter>
+		<Filter
+			Name="tdisasm"
+			>
+			<File
+				RelativePath=".\disasm-lib\cpu.c"
+				>
+				<FileConfiguration
+					Name="Debug|Win32"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+						UsePrecompiledHeader="0"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Release|Win32"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+						UsePrecompiledHeader="0"
+					/>
+				</FileConfiguration>
+			</File>
+			<File
+				RelativePath=".\disasm-lib\cpu.h"
+				>
+			</File>
+			<File
+				RelativePath=".\disasm-lib\disasm.c"
+				>
+				<FileConfiguration
+					Name="Debug|Win32"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+						UsePrecompiledHeader="0"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Release|Win32"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+						UsePrecompiledHeader="0"
+					/>
+				</FileConfiguration>
+			</File>
+			<File
+				RelativePath=".\disasm-lib\disasm.h"
+				>
+			</File>
+			<File
+				RelativePath=".\disasm-lib\disasm_x86.c"
+				>
+				<FileConfiguration
+					Name="Debug|Win32"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+						UsePrecompiledHeader="0"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Release|Win32"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+						UsePrecompiledHeader="0"
+					/>
+				</FileConfiguration>
+			</File>
+			<File
+				RelativePath=".\disasm-lib\disasm_x86.h"
+				>
+			</File>
+			<File
+				RelativePath=".\disasm-lib\disasm_x86_tables.h"
+				>
+			</File>
+			<File
+				RelativePath=".\disasm-lib\misc.c"
+				>
+				<FileConfiguration
+					Name="Debug|Win32"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+						UsePrecompiledHeader="0"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Release|Win32"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+						UsePrecompiledHeader="0"
+					/>
+				</FileConfiguration>
+			</File>
+			<File
+				RelativePath=".\disasm-lib\misc.h"
+				>
+			</File>
 		</Filter>
 	</Files>
 	<Globals>
