--- a/kkapturedll/kkapturedll.vcproj
+++ b/kkapturedll/kkapturedll.vcproj
@@ -45,6 +45,7 @@
 				Optimization="0"
 				AdditionalIncludeDirectories="..\dshow_base;..\deps"
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_USRDLL;KKAPTUREDLL_EXPORTS;_CRT_SECURE_NO_DEPRECATE"
+				StringPooling="true"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="1"
@@ -130,6 +131,7 @@
 				Optimization="2"
 				AdditionalIncludeDirectories="..\dshow_base;..\deps"
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL;KKAPTUREDLL_EXPORTS;_CRT_SECURE_NO_DEPRECATE"
+				StringPooling="true"
 				RuntimeLibrary="0"
 				UsePrecompiledHeader="2"
 				WarningLevel="3"
