Add option to force DPI awareness (and therefore disable DPI scaling) in the target demo

--- a/kkapture/kkapture.rc
+++ b/kkapture/kkapture.rc
@@ -89,9 +89,10 @@ BEGIN
     CONTROL         "Make Sleep() last one frame",IDC_SLEEPLAST,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,121,126,105,10
     CONTROL         "Intercept Windows GDI",IDC_CAPTUREGDI,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,14,138,95,10
     CONTROL         "BASS/FMOD interception",IDC_SOUNDSYS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,121,138,120,10
-    CONTROL         "Power down on completion",IDC_POWERDOWN,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,14,150,105,10
+    CONTROL         "Power down on completion",IDC_POWERDOWN,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,14,150,104,10
     CONTROL         "Separate encoder thread",IDC_ENCODERTHREAD,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,121,150,117,10
-    CONTROL         "DDraw virtual framebuffer",IDC_VIRTFRAMEBUF,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,14,163,117,10
+    CONTROL         "Force DPI Aware",IDC_FORCEDPIAWARE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,121,162,117,10
+    CONTROL         "DDraw virtual framebuffer",IDC_VIRTFRAMEBUF,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,14,163,104,10
     CONTROL         "Fake additional screen resolution:",IDC_EXTRASCREENMODE,
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,14,176,124,10
     EDITTEXT        IDC_EXTRASCREENWIDTH,138,175,25,13,ES_AUTOHSCROLL
