Add option to prevent the demo from setting topmost state in case you need to Alt+Tab away

--- a/kkapture/kkapture.rc
+++ b/kkapture/kkapture.rc
@@ -60,13 +60,13 @@ LANGUAGE LANG_NEUTRAL, SUBLANG_SYS_DEFAULT
 // Dialog
 //
 
-IDD_MAINWIN DIALOGEX 0, 0, 258, 294
+IDD_MAINWIN DIALOGEX 0, 0, 258, 319
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION ".kkapture 1.02"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    DEFPUSHBUTTON   "kkapture!",IDOK,149,273,50,14
-    PUSHBUTTON      "Exit",IDCANCEL,201,273,50,14
+    DEFPUSHBUTTON   "kkapture!",IDOK,149,298,50,14
+    PUSHBUTTON      "Exit",IDCANCEL,201,298,50,14
     EDITTEXT        IDC_DEMO,51,7,146,13,ES_AUTOHSCROLL
     LTEXT           "Demo:",IDC_STATIC,9,9,22,8
     PUSHBUTTON      "Browse...",IDC_BDEMO,201,7,50,13
@@ -82,7 +82,7 @@ BEGIN
     GROUPBOX        "AVI Encoding Options",IDC_STATIC,7,73,244,26
     LTEXT           "Video Codec:",IDC_VIDEOCODEC,14,84,176,8
     PUSHBUTTON      "Pick...",IDC_VCPICK,214,82,30,12
-    GROUPBOX        "Tweaking",IDC_STATIC,7,103,244,89
+    GROUPBOX        "Tweaking",IDC_STATIC,7,103,244,114
     CONTROL         "Capture Video",IDC_VCAPTURE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,14,114,61,10
     CONTROL         "Capture Audio",IDC_ACAPTURE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,14,126,62,10
     CONTROL         "Skip digital silence at start",IDC_SKIPSILENCE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,121,114,99,10
@@ -98,16 +98,17 @@ BEGIN
     EDITTEXT        IDC_EXTRASCREENWIDTH,138,175,25,13,ES_AUTOHSCROLL
     LTEXT           "x",IDC_EXTRASCREENX,166,176,8,8
     EDITTEXT        IDC_EXTRASCREENHEIGHT,172,175,25,13,ES_AUTOHSCROLL
-    GROUPBOX        "Auto-skip",IDC_STATIC,7,196,244,72
+    CONTROL         "Prevent topmost windows",IDC_PREVENTTOPMOST,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,14,189,101,10
+    GROUPBOX        "Auto-skip",IDC_STATIC,7,220,244,72
     CONTROL         "Skip frames on frequent timer checks",IDC_AUTOSKIP_TIMER,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,14,208,150,10
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,14,232,150,10
     CONTROL         "Enable automatic frameskip on timeout",IDC_AUTOSKIP,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,14,221,150,10
-    LTEXT           "Initial frame timeout (seconds):",IDC_STATIC,14,235,140,8
-    EDITTEXT        IDC_FIRSTFRAMETIMEOUT,130,233,31,13,ES_AUTOHSCROLL
-    LTEXT           "Other frames timeout (seconds):",IDC_STATIC,14,251,140,8
-    EDITTEXT        IDC_OTHERFRAMETIMEOUT,130,249,31,13,ES_AUTOHSCROLL
-    CONTROL         "Self-test mode",IDC_SELFTEST,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,275,68,10
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,14,245,150,10
+    LTEXT           "Initial frame timeout (seconds):",IDC_STATIC,14,259,140,8
+    EDITTEXT        IDC_FIRSTFRAMETIMEOUT,130,257,31,13,ES_AUTOHSCROLL
+    LTEXT           "Other frames timeout (seconds):",IDC_STATIC,14,275,140,8
+    EDITTEXT        IDC_OTHERFRAMETIMEOUT,130,273,31,13,ES_AUTOHSCROLL
+    CONTROL         "Self-test mode",IDC_SELFTEST,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,299,68,10
 END
 
 
@@ -124,7 +125,7 @@ BEGIN
         LEFTMARGIN, 7
         RIGHTMARGIN, 251
         TOPMARGIN, 7
-        BOTTOMMARGIN, 287
+        BOTTOMMARGIN, 312
     END
 END
 #endif    // APSTUDIO_INVOKED
